--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>React Minimal</title>
+    <style>
+      body {
+        background-image: url('../src/IMG/background.jpg');
+        background-position: top;
+      }
+      #root{
+        display: inline-block;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+      }
+    </style> 
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" ></div>
   </body>
 </html>
