--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>React Minimal</title>
-    <style>
-      body {
-        background-image: url('../src/IMG/background.jpg');
-        background-position: top;
-      }
-      #root{
-        display: inline-block;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-      }
-    </style> 
+    
   </head>
   <body>
     <div id="root" ></div>
